# indian_traffic_rules_assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: app.py
data/processed/: faiss_cosine_index.idx  indian_traffic_rules_chunks.json
frontend/: index.html  script.js  styles.css
src/: chunking.py  embedding.py  generator.py  main.py  retriever.py  text_extraction.py
